Public/www/css/styles.css
/* ... */
.tabs .tab a:hover, .tabs .tab a {
  color: #ffe9b5;
}

.tabs .tab a:hover, .tabs .tab a.active {
  color: white;
}

.tabs .indicator {
  background-color: white;
}


.tabs-content::-webkit-scrollbar {
    display: none;
}

.tabs-content {
  position:absolute;
  bottom: 0px;
  top: 10px;
  width: 100%;
  height: 85%;
  min-height: 25%;
}

#group-tabs-content.tabs-content {
  top: 49%;
}

.tabs-content {
  margin-top: 50px;
}

.tabs-content ul.group-list {
  position: absolute;
  list-style-type: none;
  padding-bottom: 10%;
  margin-top: 0px;
  overflow: scroll;
  width: 100%;
  max-height: 100%;
}

.tabs-content ul.acc-settings {
  list-style-type: none;
  padding: 0px;
  height: 100%;
}

.tabs-content li {
  margin-top: 10px;
}

.tabs-content .group-container {
  position: relative;
  width: 100%;
  height: 60px;
}

.tabs-content .group-container.main:hover {
  background-color: #fff6e5;
}

.tabs-content .group-container .group-active {
  position: absolute;
  display: inline-block;
  left: 0px;
  width: 35px;
  height: 100%;
}


.tabs-content .group-container .image {
  position: absolute;
  top: 5%;
  left: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 55px;
  height: 90%;
  overflow: hidden;
  border-radius: 50px;
  z-index: 2;
}

.tabs-content .group-container .image img {
  position: absolute;
  min-width: 100%;
  min-height: 100%;
  top: 50%;
  transform: translateY(-50%);
  z-index: 1;
}

.fit-horizontally {
    height: 100%;
    width: auto;
}

.fit-vertically {
  width: 100%;
  height: auto;
}

.tabs-content .group-container .image-animation {
  position: absolute;
  top: 0%;
  left: 17px;
  display: inline-block;
  width: 61px;
  height: 100%;
  overflow: hidden;
  border-radius: 50px;
  z-index: 0;
  background-color:#cccccc;
}

.tabs-content .online .group-container .image-animation{
  background-color: #64db64;
}

.tabs-content .pending .group-container .image-animation{
  background-color: #4e81a8;
}

.tabs-content .group-container .group-header {
  position: absolute;
  left: 105px;
  width: 65%;
  height: 100%;
}

.tabs-content .group-header .group-title {
  position: absolute;
  width: 100%;
  top: 0px;
  font-size: 18px;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.tabs-content .group-header .group-status {
  position: absolute;
  width: 100%;
  bottom: 5px;
  margin: 0px;
  font-size: 15px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.round-button {
  background-color: #fb8c00;
}

/* Splash screen */

#app-container.splash {
  background-image: linear-gradient(70deg, orange, #ff8f32);
  background-size: auto 100%;
  background-position: center center;
  background-repeat: no-repeat;
  display: flex;
  justify-content: center;
}

.loading-box {
  position: absolute;
  top: 25%;
  width: 100%;
  display:flex;
  justify-content: center;
}

.loading-box h1{
  text-align: center;
  display:block;
  font-size: 4em;
  color: white;
  margin-bottom: 40px;
}

.loading-box .loader{
  position:absolute;
  margin-top: 20px;
  top: 70%;
}

/* The side navigation menu */
#logo-container {
  width: 100%;
  height: 100px;
  position: relative;
}

#slide-out li {
  position: relative;
  margin-top: 10px;
}


.sidenav {
    background-color: #fb8c00;
}

.sidenav.new-group-sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 100;
    top: 0;
    right: 0 !important;
    background-color: white;
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s;
}

.link-container {
  position: relative;
  height: 100%;
  width: 100%;
}

.list-notification {
  position: absolute;
  right: 4px;
  top: 0px;
}

.link-icon {
  position: absolute;
  left: 0px;
  height: 100%;
  min-width: 40px;
  padding-left: 23px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.link-icon img {
  position: absolute;
  width: 60%;
  max-width: 100%;
  z-index: 1;
}

/* The navigation menu links */
.sidenav p {
  font-weight: 0;
  margin: 0px;
  padding-left: 40px;
  font-size: 1.3rem;
  color: white;
  display: block;
}

#sidebar-icon {
  transition: 0.4s;
  position: absolute;
  top: 2.5%;
  left: 2.5%;
  z-index: 1;
}


/* Add class for swipe Animation in tabs*/

#tabs-header.swipeUp {
  height: 100%;
}

.tabs-content.swipeUp {
  height: 91% !important;
}

#tabs-container.swipeUp {
  transform: translateY(0%)
}

#tabs-container.swipeUp .tabs-content ul {
  list-style-type: none;
  padding: 0px;
  overflow: scroll;
  height: 100%;
  transition: none ;
}


#sidebar-icon.swipeUp {
  visibility: hidden;
  opacity: 0;
}

.tabs-content.swipeUp {
  height: 91%;
}

#sidebar-container.swipeIt {
  transform: translateX(0%);
}


/* Styles for users.html*/

#timeStamp {
  color: gray;
}

#header-nav {
  position: fixed;
  height: 61px;
  width: 100%;
  background: #c88719;
  box-shadow: 0px 1px 15px 0px #888888;
  z-index: 10;
}

#header-nav #back-arrow-container, .back-arrow-container {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  left: 0px;
  width: 15%;
  border-radius: 55px;
}

#header-nav #back-arrow-container img, .back-arrow-container img {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
}

#header-nav #back-arrow-container a span, .back-arrow-container a span {
  font-size: 35px;
  color: white;
  line-height: 55px;
  text-align: center;
}

a:-webkit-any-link {
  /* Removes default underline when clicking a link*/
  text-decoration: none !important;
}

.title-container {
  position: absolute;
  display: inline-block;
  width: 85%;
  height: 100%;
  left: 15%;
  padding-left: 15px;
}

.title-container #group-title-group {
  height: 100%;
  display: flex;
  align-items: center;
  margin-top: 0px;
  padding: 0px;
}
/* ... */

